--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <div class="w-full h-screen bg-black font-['helvetica_now_display']">
-        <div class="imagecontainer w-full h-screen relative ">
-            <div class="maincard z-[3] w-full absolute h-screen bg-orange-600">
+        <div class="imagecontainer w-full h-screen relative overflow-hidden">
+            <div
+                class="maincard z-[3] w-[100%] absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 h-[100%] bg-orange-600">
                 <img class="w-full object-cover h-full" src="" alt="">
             </div>
-            <div class="incomingcard z-[2] w-full absolute h-screen bg-green-600">
+            <div
+                class="incomingcard z-[2] w-[100%] absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 h-[100%] bg-green-600">
                 <img class="w-full object-cover h-full" src="" alt="">
             </div>
         </div>
@@ -35,30 +39,27 @@
             </div>
             <div class="detailscontainer w-full">
                 <div class="details px-5 py-6 w-full">
-                    <div class="location flex gap-4">
-                        <i
-                            class="w-[1.6rem] h-[1.6rem] flex items-center justify-center font-semibold bg-white rounded-full ri-corner-left-up-line"></i>
+                    <div class="element location flex gap-4">
+                        <i cl
+                            ass="w-[1.6rem] h-[1.6rem] flex items-center justify-center font-semibold bg-white rounded-full ri-corner-left-up-line"></i>
                         <h3 class="text-white">USA, California</h3>
                     </div>
-                    <div class="name flex gap-3 text-white mt-1">
+                    <div class="element name flex gap-3 text-white mt-1">
                         <h1 class="font-regular tracking-tighter text-7xl">Victoria</h1>
                         <h1 class="font-regular tracking-tighter opacity-70 text-7xl">20</h1>
                     </div>
-                    <div class="tags flex gap-5 text-white mt-4">
-                       
+                    <div class="element tags flex gap-5 text-white mt-4">
+
                     </div>
-                    <div class="bio text-white/80 mt-5">
+                    <div class="element bio text-white/80 mt-5">
                         <h3 class="text-xl">Bio</h3>
-                        <p class="text-lg mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.Lorem
-                            Ipsum is simply
-                            dummy text of the printing and typesetting industry.</p>
+                        <p class="text-lg mt-3"></p>
                     </div>
-                    <div class="flex items-start mt-10 gap-3">
-                        <button class="py-3 rounded-xl w-1/2 bg-white">
+                    <div class="element flex items-start mt-10 gap-3">
+                        <button class="deny py-3 rounded-xl w-1/2 bg-white">
                             <i class="text-2xl font-semibold ri-close-line"></i>
                         </button>
-                        <button class="py-3 w-1/2 rounded-xl bg-[#FC5149]">
+                        <button class="accept py-3 w-1/2 rounded-xl bg-[#FC5149]">
                             <i class="text-2xl font-semibold text-white ri-heart-2-fill"></i>
                         </button>
                     </div>
@@ -72,4 +73,5 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
